--- a/package.json
+++ b/package.json
@@ -35,12 +35,15 @@
         "scrollreveal": "3.3.6"
     },
     "devDependencies": {
-        "browser-sync": "2.18.13",
-        "gulp": "^3.9.1",
+        "concurrently": "^5.0.2",
         "gulp-clean-css": "3.9.0",
         "gulp-header": "1.8.9",
         "gulp-rename": "^1.2.2",
-        "gulp-sass": "^3.1.0",
-        "gulp-uglify": "3.0.0"
+        "gulp-uglify": "3.0.0",
+        "http-server": "^0.12.0"
+    },
+    "scripts": {
+    "start": "npm run open",
+    "open": "concurrently \"http-server -a localhost -p 1234\" \"open http://localhost:1234/\""
     }
 }
